--- a/index.css
+++ b/index.css
@@ -34,8 +34,12 @@
 .intro_container {
     background-color: rgb(255, 255, 255);
     margin-top: 2%;
+    padding-bottom: 2%;
 }
 
+.intro_container .row {
+    align-items: center;
+}
 
 .intro-head h1 {
     font-size: 40px;
@@ -43,26 +47,30 @@
     font-weight: bold;
     font-family: Georgia, 'Times New Roman', Times, serif;
     text-align: center;
+    margin-bottom: 3%;
 }
 
 .intro-text {
-    padding: 0%;
+    padding: 0;
     display: flex;
     align-items: center;
     color: #003257;
-
+    height: 100%;
 }
 
 .Intro-img {
-    width: 75%;
-    height: 80%;
-    z-index: 1;
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+    display: block;
+    margin: 0 auto;
 }
 
 .intro-text p {
     font-size: 20px;
-    padding: 2% 2%;
+    padding: 2%;
     text-align: justify;
+    margin: 0;
 }
 
 
@@ -189,23 +197,24 @@
 }
 
 .transprent_place {
-    /* padding: 10%; */
     background-image: url("./images/student_img-bg-1.png");
     min-height: 400px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .transprent_place h1 {
     color: #001f42;
     text-align: center;
-    padding-top: 7%;
     font-size: 64px;
-    font-weight: bolder;
-    font-style: italic;
-    font-family: 'Pacifico', cursive;
+    font-weight: bold;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     text-shadow: 2px 2px 4px #000000;
+    margin: 0;
 }
 
 
@@ -270,6 +279,7 @@
     font-weight: bold;
     font-size: 40px;
     color: #003257;
+    text-align: center;
 }
 
 .OV-img-col {
@@ -562,6 +572,8 @@
     font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
+
+
 /* Desktop and Large Laptop Views */
 @media (min-width: 1200px) {
     .card {
@@ -631,19 +643,27 @@
 
     .intro_container {
         margin-top: 3%;
+        padding: 4% 1%;
     }
 
     .intro-head h1 {
         font-size: 28px;
+        margin-bottom: 4%;
     }
 
     .intro-text {
         text-align: center;
+        padding: 0 2%;
+        margin-bottom: 3%;
     }
 
     .intro-text p {
         font-size: 16px;
         padding: 2%;
+    }
+
+    .Intro-img {
+        margin-top: 2%;
     }
 
     .card {
@@ -684,7 +704,6 @@
 
     .transprent_place h1 {
         font-size: 36px;
-        padding-top: 20%;
     }
 
     .OVR-contain {
@@ -887,7 +906,6 @@
 
     .transprent_place h1 {
         font-size: 28px;
-        padding-top: 35%;
     }
 
     .OVR-contain {
@@ -1068,7 +1086,6 @@
 
     .transprent_place h1 {
         font-size: 48px;
-        padding-top: 18%;
     }
 
     .OVR-contain {
@@ -1485,3 +1502,17 @@
         max-width: 180px;
     }
 }
+/* Extra Large Desktop Views */
+@media (min-width: 1300px) {
+    .intro-text p {
+        font-size: 24px !important;
+    }
+}
+
+/* Ultra Large Desktop Views */
+@media (min-width: 1600px) {
+    .intro-text p {
+        font-size: 28px !important;
+    }
+}
+
